// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with nothing selected 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin-bottom: 12px;
}

.c5 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1rem;
  line-height: 1.375em;
  margin-bottom: 0.5em;
  margin-left: 8px;
  margin-bottom: 0;
}

.c4 {
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c2 {
  position: relative;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  padding: 6px;
  background-color: #ffffff;
  border: 1px solid #00000040;
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.c3 {
  width: 12px;
  height: 12px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  border-radius: 50%;
  -webkit-transition: -webkit-transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  -webkit-transition: transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  transition: transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  background-color: #6A50F2;
}

<div>
  <div
    class=""
    role="radiogroup"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          data-testid="pbl-radio"
        >
          <div
            class="c3"
            data-testid="pbl-radio-handle"
          />
          <input
            class="c4"
            data-testid="pbl-radio-input"
            id="custom-id-1"
            name="greeting"
            type="radio"
            value="hello"
          />
        </div>
        <label
          class="c5"
          data-testid="pbl-radio-label"
          for="custom-id-1"
        >
          Hello
        </label>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          data-testid="pbl-radio"
        >
          <div
            class="c3"
            data-testid="pbl-radio-handle"
          />
          <input
            class="c4"
            data-testid="pbl-radio-input"
            id="custom-id-2"
            name="greeting"
            type="radio"
            value="world"
          />
        </div>
        <label
          class="c5"
          data-testid="pbl-radio-label"
          for="custom-id-2"
        >
          World
        </label>
      </div>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          data-testid="pbl-radio"
        >
          <div
            class="c3"
            data-testid="pbl-radio-handle"
          />
          <input
            class="c4"
            data-testid="pbl-radio-input"
            id="custom-id-3"
            name="greeting"
            type="radio"
            value="bye"
          />
        </div>
        <label
          class="c5"
          data-testid="pbl-radio-label"
          for="custom-id-3"
        >
          Bye
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Work with one radio button 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin-bottom: 12px;
}

.c5 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 1rem;
  line-height: 1.375em;
  margin-bottom: 0.5em;
  margin-left: 8px;
  margin-bottom: 0;
}

.c4 {
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c2 {
  position: relative;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  padding: 6px;
  background-color: #ffffff;
  border: 1px solid #00000040;
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.c3 {
  width: 12px;
  height: 12px;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  border-radius: 50%;
  -webkit-transition: -webkit-transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  -webkit-transition: transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  transition: transform 0.15s cubic-bezier(0.34,1.56,0.64,1);
  background-color: #6A50F2;
}

<div>
  <div
    class=""
    role="radiogroup"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          data-testid="pbl-radio"
        >
          <div
            class="c3"
            data-testid="pbl-radio-handle"
          />
          <input
            class="c4"
            data-testid="pbl-radio-input"
            id="custom-id"
            name="greeting"
            type="radio"
            value="hello"
          />
        </div>
        <label
          class="c5"
          data-testid="pbl-radio-label"
          for="custom-id"
        >
          Hello
        </label>
      </div>
    </div>
  </div>
</div>
`;
